telas home e post estilizadas

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,45 @@
-// TODO
+.container {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.posts {
+  max-width: 720px;
+  margin: 0 auto;
+  a {
+    display: block;
+
+    & + a {
+      margin-top: 0.8rem;
+      padding-top: 2rem;
+    }
+
+    strong {
+      display: block;
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin-top: 1rem;
+      line-height: 2rem;
+      transition: color 0.2s;
+    }
+
+    &:hover strong {
+      color: var(--pink-500);
+    }
+
+    p {
+      font-size: 1.125rem;
+      color: var(--gray-100);
+      margin-top: 0.5rem;
+      margin-bottom: 1.5rem;
+      line-height: 22px;
+    }
+  }
+
+  a:last-child {
+    color: var(--pink-500);
+    font-weight: bold;
+    margin: 2rem 0 4rem;
+  }
+}
