--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,1 +1,19 @@
-// TODO
+.info {
+  height: 20px;
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+  margin: 1rem auto 5rem;
+  color: var(--gray-300);
+
+  time + svg,
+  span + svg {
+    margin-left: 1.2rem;
+  }
+
+  svg {
+    height: 20px;
+    width: 20px;
+    margin-right: 0.3rem;
+  }
+}
