home funcionando com  testes e tudo

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -3,9 +3,10 @@
 }
 
 .headerContent {
-  max-width: 720px;
+  max-width: 760px;
   height: 6.6rem;
   margin: 0 auto;
+  padding: 0 2rem;
   display: flex;
   align-items: center;
 }
