--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   font-size: 1rem;
-  margin: 1rem auto 5rem;
+  margin: 1rem auto;
   color: var(--gray-300);
 
   time + svg,
