--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -13,6 +13,10 @@
     font-size: 3.5rem;
     font-weight: 900;
   }
+  h2 {
+    font-size: 2.2rem;
+    margin: 5rem 0 3rem;
+  }
 
   .postContent {
     margin-top: 2rem;
