--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -41,6 +41,43 @@
       }
     }
   }
+  div + span {
+    margin-top: 1rem;
+    display: block;
+    font-style: italic;
+    font-size: 0.875rem;
+    color: var(--gray-300);
+  }
+
+  .navigation {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+    margin-top: 4rem;
+    padding: 4rem 0 2rem;
+    border-top: 1px solid rgb(215, 215, 215, 0.1);
+
+    h3 {
+      font-size: 1.125rem;
+      font-weight: 400;
+      color: var(--white);
+      margin-bottom: 0.5rem;
+    }
+
+    a {
+      color: var(--pink-500);
+      font-weight: 600;
+    }
+
+    div {
+      max-width: 50%;
+      width: 100%;
+    }
+
+    div + div {
+      text-align: right;
+    }
+  }
 }
 
 .banner {
