--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -2,7 +2,7 @@
   height: 20px;
   display: flex;
   align-items: center;
-  font-size: 1rem;
+  font-size: 0.9rem;
   margin: 1rem auto;
   color: var(--gray-300);
 
@@ -16,4 +16,18 @@
     width: 20px;
     margin-right: 0.3rem;
   }
+}
+
+.preview {
+  display: block;
+  width: 100%;
+  max-width: 700px;
+  margin: 5.5rem auto 2rem;
+  background: var(--white);
+  color: var(--gray-900);
+  text-align: center;
+  border-radius: 4px;
+  padding: 1rem;
+  font-weight: 600;
+  font-size: 1.125rem;
 }
