--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -16,12 +16,23 @@
     width: 20px;
     margin-right: 0.3rem;
   }
+  
+  
+  @media (max-width: 500px) {
+    font-size: 1.6rem;
+    margin: 1.6rem auto;
+    svg {
+      height: 25px;
+      width: 25px;
+      margin-right: 0.3rem;
+    }
+  }
 }
 
 .preview {
   display: block;
-  width: 100%;
   max-width: 700px;
+  width: 100%;
   margin: 5.5rem auto 2rem;
   background: var(--white);
   color: var(--gray-900);
