--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,6 +4,7 @@
   padding: 0;
 }
 
+
 :root {
   --white: #f8f8f8;
 
@@ -46,4 +47,20 @@ button {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #1a1d23;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 10rem;
+  background: #616480;
 }
