--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,11 +1,12 @@
 .info {
+  max-width: 720px;
   height: 20px;
   display: flex;
   align-items: center;
   font-size: 0.9rem;
   margin: 1rem auto;
   color: var(--gray-300);
-
+  
   time + svg,
   span + svg {
     margin-left: 1.2rem;
@@ -19,7 +20,7 @@
   
   
   @media (max-width: 500px) {
-    font-size: 1.6rem;
+    font-size: 1.125rem;
     margin: 1.6rem auto;
     svg {
       height: 25px;
